@@ -1,5 +1,5 @@
-jextract --source -t libffmpeg \
-  -I /usr/local/Cellar/ffmpeg@4/4.4.4/include \
+jextract --output src -t libffmpeg \
+  -I /usr/local/Cellar/ffmpeg@4/4.4.4_4/include \
   -l avcodec \
   -l avformat \
   -l avutil \
@@ -7,4 +7,4 @@ jextract --source -t libffmpeg \
   --header-class-name Libffmpeg \
   libffmpeg.h
 
-javac --enable-preview --source=22 libffmpeg/*.java
+javac --source=22 -d . src/libffmpeg/*.java
