@@ -1,4 +1,4 @@
-jextract --source -t org.unix \
+jextract --output src -t org.unix \
   /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/libproc.h
 
-javac --enable-preview --source=22 org/unix/*.java
+javac --source=22 -d . src/org/unix/*.java
